crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__fixtures_reassemble_into_readable_transcripts@multi_turn_1.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 239
expression: transcript
input_file: crates/cursor_acp/fixtures/real/multi_turn_1.sse
---

--- thinking ---
The user wants me to say only the word "first" and nothing else.
--- assistant ---
first
