crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__fixtures_reassemble_into_readable_transcripts@shell_arithmetic.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 239
expression: transcript
input_file: crates/cursor_acp/fixtures/real/shell_arithmetic.sse
---

--- thinking ---
Running a single shell command to compute 5 + 5.
--- assistant ---
I'll compute 5 + 5 with one shell command and report the result.
--- thinking ---
The shell command returned 10.
--- assistant ---
5 + 5 is **10**.
