crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__fixtures_reassemble_into_readable_transcripts@thinking_only.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 239
expression: transcript
input_file: crates/cursor_acp/fixtures/real/thinking_only.sse
---

--- thinking ---
Preparing a pull request with a one-line test appended to the README change.

Checking the repository state and existing README changes.
--- assistant ---
I'll inspect the repo and README so I can add a one-line TEST at the bottom and open a PR.
