crates/cursor_cloud_agents/src/replay/snapshots/cursor_cloud_agents__replay__test__fixtures_translate_to_their_pinned_snapshot@multi_turn_1.sse.snap
---
source: crates/cursor_acp/src/replay/test.rs
assertion_line: 210
expression: updates(sse)
input_file: crates/cursor_acp/fixtures/real/multi_turn_1.sse
---
[
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": "The user wants me to"
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": " say only the word \"first\""
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": " and nothing else."
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "first"
    }
  }
]
